--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^18.2.0",
         "react-device-detect": "^2.2.3",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-router-dom": "^6.16.0",
         "react-tooltip": "^5.25.0",
         "sass": "^1.69.5",
