--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
         "react-router-dom": "^6.16.0",
+        "react-textfit": "^1.1.1",
         "react-tooltip": "^5.25.0",
         "sass": "^1.69.5",
         "terser": "^5.19.4",
