--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "axios": "^1.5.0",
-        "dotenv": "^16.3.1",
-        "gsap": "^3.12.2",
+        "@namhong2001/react-textfit": "^1.1.5",
+        "dotenv": "^16.4.1",
+        "gsap": "^3.12.5",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.3",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
-        "react-router-dom": "^6.16.0",
-        "react-textfit": "^1.1.1",
-        "react-tooltip": "^5.25.0",
-        "sass": "^1.69.5",
-        "terser": "^5.19.4",
-        "typescript": "^5.2.2"
+        "react-router-dom": "^6.22.0",
+        "react-tooltip": "^5.26.0",
+        "sass": "^1.70.0",
+        "terser": "^5.27.0",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react-swc": "^3.3.2",
-        "eslint": "^8.45.0",
-        "eslint-plugin-react": "^7.32.2",
+        "@types/react": "^18.2.52",
+        "@types/react-dom": "^18.2.18",
+        "@vitejs/plugin-react-swc": "^3.6.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "vite": "^4.4.5"
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "vite": "^4.5.2"
     }
 }
