markdown preivew input!
Co-authored-by: Piotr <PiootrA@users.noreply.github.com>
Co-authored-by: steve <microcrit@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/css": "^11.11.2",
         "@namhong2001/react-textfit": "^1.1.5",
         "dotenv": "^16.4.1",
         "gsap": "^3.12.5",
         "phaser": "^3.70.0",
+        "prismjs": "^1.29.0",
         "react": "^18.2.0",
+        "react-contenteditable": "^3.3.7",
         "react-device-detect": "^2.2.3",
         "react-dom": "^18.2.0",
         "react-helmet": "^6.1.0",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.22.0",
         "react-tooltip": "^5.26.0",
         "sass": "^1.70.0",
+        "slate": "^0.102.0",
+        "slate-history": "^0.100.0",
+        "slate-react": "^0.102.0",
         "terser": "^5.27.0",
         "typescript": "^5.3.3"
     },
