--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "slate": "^0.102.0",
         "slate-history": "^0.100.0",
         "slate-react": "^0.102.0",
+        "socket.io-client": "^4.7.5",
         "terser": "^5.27.0",
         "typescript": "^5.3.3"
     },
