--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
     "compilerOptions": {
         "target": "ES2020",
+        "baseUrl": ".",
+        "paths": {
+            "@components/*": ["src/components/*"]
+        },
         "useDefineForClassFields": true,
         "lib": [
             "ES2020",
