--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@namhong2001/react-textfit": "^2.0.0",
     "@stylistic/eslint-plugin": "^1.7.0",
+    "@types/react-helmet-async": "^1.0.3",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^16.4.5",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "sass": "^1.75.0",
