basic frontend functionality working now, almost to the same state as the js frontend

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@namhong2001/react-textfit": "^2.0.0",
     "@stylistic/eslint-plugin": "^1.7.0",
     "@types/react-helmet-async": "^1.0.3",
+    "@types/react-tooltip": "^4.2.4",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^16.4.5",
     "prismjs": "^1.29.0",
@@ -20,6 +21,7 @@
     "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
+    "react-tooltip": "^5.26.3",
     "sass": "^1.75.0",
     "slate": "^0.102.0",
     "slate-react": "^0.102.0",
