--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "target": "ES2020",
         "baseUrl": ".",
         "paths": {
+            "react-textfit": ["node_modules/@namhong2001/react-textfit"],
             "@components/*": ["src/components/*"],
+            "@controllers/*": ["src/controllers/*"],
+            "@functions/*": ["src/functions/*"],
             "@stores/*": ["src/stores/*"]
         },
         "useDefineForClassFields": true,
