--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-tooltip": "^4.2.4",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^16.4.5",
+    "phaser": "^3.80.1",
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
