--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
         "typescript": "^5.4.5",
+        "typescript-plugin-css-modules": "^5.1.0",
         "vite": "^5.2.0"
     }
 }
