--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,27 @@
         "target": "ES2020",
         "baseUrl": ".",
         "paths": {
-            "react-textfit": ["node_modules/@namhong2001/react-textfit"],
-            "@components/*": ["src/components/*"],
-            "@controllers/*": ["src/controllers/*"],
-            "@functions/*": ["src/functions/*"],
-            "@stores/*": ["src/stores/*"]
+            "react-textfit": [
+                "node_modules/@namhong2001/react-textfit"
+            ],
+            "@components/*": [
+                "src/components/*"
+            ],
+            "@controllers/*": [
+                "src/controllers/*"
+            ],
+            "@functions/*": [
+                "src/functions/*"
+            ],
+            "@stores/*": [
+                "src/stores/*"
+            ]
         },
+        "plugins": [
+            {
+                "name": "typescript-plugin-css-modules",
+            }
+        ],
         "useDefineForClassFields": true,
         "lib": [
             "ES2020",
