--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "dependencies": {
         "@namhong2001/react-textfit": "^2.0.0",
-        "@stylistic/eslint-plugin": "^1.7.0",
+        "@stylistic/eslint-plugin": "^1.8.1",
         "@types/prismjs": "^1.26.4",
         "@types/qrcode": "^1.5.5",
         "@types/react-helmet-async": "^1.0.3",
@@ -19,30 +19,31 @@
         "dotenv": "^16.4.5",
         "prismjs": "^1.29.0",
         "qrcode": "^1.5.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-helmet-async": "^2.0.4",
-        "react-router-dom": "^6.22.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-helmet-async": "^2.0.5",
+        "react-router-dom": "^6.23.1",
         "react-spring": "^9.7.3",
-        "react-tooltip": "^5.26.3",
-        "sass": "^1.75.0",
+        "react-tooltip": "^5.26.4",
+        "sass": "^1.77.5",
         "slate": "^0.102.0",
         "slate-history": "^0.100.0",
         "slate-react": "^0.102.0",
         "socket.io-client": "^4.7.5",
-        "terser": "^5.30.3"
+        "terser": "^5.31.1",
+        "blacket-types": "link:blacket-types"
     },
     "devDependencies": {
-        "@types/react": "^18.2.66",
-        "@types/react-dom": "^18.2.22",
-        "@typescript-eslint/eslint-plugin": "^7.2.0",
-        "@typescript-eslint/parser": "^7.2.0",
-        "@vitejs/plugin-react-swc": "^3.5.0",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^7.13.0",
+        "@typescript-eslint/parser": "^7.13.0",
+        "@vitejs/plugin-react-swc": "^3.7.0",
         "eslint": "^8.57.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.6",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
         "typescript": "^5.4.5",
         "typescript-plugin-css-modules": "^5.1.0",
-        "vite": "^5.2.0"
+        "vite": "^5.3.0"
     }
 }
