--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
