forms finished, trading plaza and map editor being worked on, fixed a lot of small issues and bugs
Co-authored-by: zastix <zastlx@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
             "react-textfit": [
                 "node_modules/@namhong2001/react-textfit"
             ],
+            "@brender/*": [
+                "src/brender/*"
+            ],
             "@components/*": [
                 "src/components/*"
             ],
