--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.1",
     "react-spring": "^9.7.3",
     "react-tooltip": "^5.26.4",
     "sass": "^1.77.5",
