--- a/package.json
+++ b/package.json
@@ -9,44 +9,43 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@namhong2001/react-textfit": "^2.0.0",
-    "@stripe/react-stripe-js": "^2.8.1",
-    "@stripe/stripe-js": "^4.8.0",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "@stylistic/eslint-plugin": "^1.8.1",
-    "@types/prismjs": "^1.26.4",
+    "@types/prismjs": "^1.26.5",
     "@types/qrcode": "^1.5.5",
     "@types/react-helmet-async": "^1.0.3",
     "@types/react-tooltip": "^4.2.4",
     "@use-gesture/react": "^10.3.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "prismjs": "^1.29.0",
-    "qrcode": "^1.5.3",
-    "react": "^18.3.1",
+    "qrcode": "^1.5.4",
+    "react": "19",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.23.1",
-    "react-select": "^5.8.1",
-    "react-spring": "^9.7.3",
-    "react-tooltip": "^5.26.4",
-    "sass": "^1.77.5",
-    "slate": "^0.102.0",
+    "react-router-dom": "^6.28.0",
+    "react-select": "^5.8.3",
+    "react-spring": "^9.7.4",
+    "react-tooltip": "^5.28.0",
+    "sass": "^1.82.0",
+    "slate": "0.110.2",
     "slate-history": "^0.100.0",
     "slate-react": "^0.102.0",
-    "socket.io-client": "^4.7.5",
-    "terser": "^5.31.1"
+    "socket.io-client": "^4.8.1",
+    "terser": "^5.37.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "eslint": "^8.57.0",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react-swc": "^3.7.2",
+    "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "typescript": "^5.4.5",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "typescript": "^5.7.2",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.3.0"
+    "vite": "^5.4.11"
   }
 }
