refactor component exports, update TypeScript definitions, and remove unused files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
             "@components/*": [
                 "src/components/*"
             ],
+            "@constants/*": [
+                "src/constants/*"
+            ],
             "@controllers/*": [
                 "src/controllers/*"
             ],
