--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
-    "@stylistic/eslint-plugin": "^1.8.1",
+    "@stylistic/eslint-plugin": "^3.1.0",
     "@types/prismjs": "^1.26.5",
     "@types/qrcode": "^1.5.5",
     "@types/react-helmet-async": "^1.0.3",
@@ -20,30 +20,30 @@
     "dotenv": "^16.4.7",
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.4",
-    "react": "19",
+    "react": "^19.0.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "19",
+    "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.28.0",
-    "react-select": "^5.8.3",
-    "react-spring": "^9.7.4",
+    "react-router-dom": "^6.29.0",
+    "react-select": "^5.10.0",
+    "react-spring": "^9.7.5",
     "react-tooltip": "^5.28.0",
-    "sass": "^1.82.0",
+    "sass": "^1.84.0",
     "slate-react": "^0.112.1",
     "socket.io-client": "^4.8.1",
-    "terser": "^5.37.0"
+    "terser": "^5.39.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18.3.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "typescript": "^5.7.2",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "typescript": "^5.7.3",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.14"
   }
 }
