--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react-helmet-async": "^1.0.3",
     "@types/react-tooltip": "^4.2.4",
+    "@types/react-twemoji": "^0.4.3",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^16.4.7",
     "prismjs": "^1.29.0",
@@ -28,6 +29,7 @@
     "react-select": "^5.10.0",
     "react-spring": "^9.7.5",
     "react-tooltip": "^5.28.0",
+    "react-twemoji": "^0.6.0",
     "sass": "^1.84.0",
     "slate-react": "^0.112.1",
     "socket.io-client": "^4.8.1",
