--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-twemoji": "^0.4.3",
     "@use-gesture/react": "^10.3.1",
     "dotenv": "^16.4.7",
+    "motion": "^12.4.7",
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
