--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-spring": "^9.7.5",
         "react-tooltip": "^5.28.0",
         "react-twemoji": "^0.6.0",
+        "react-type-animation": "^3.2.0",
         "sass": "^1.85.1",
         "slate-react": "^0.112.1",
         "socket.io-client": "^4.8.1",
@@ -47,6 +48,6 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "typescript": "^5.8.2",
         "typescript-plugin-css-modules": "^5.1.0",
-        "vite": "^5.4.14"
+        "vite": "^6.3.5"
     }
 }
