--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-colorful": "^5.6.1",
         "react-dom": "^19.0.0",
         "react-helmet-async": "^2.0.5",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^6.30.0",
         "react-select": "^5.10.1",
         "react-spring": "^9.7.5",
