--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-select": "^5.10.1",
         "react-spring": "^9.7.5",
         "react-tooltip": "^5.28.0",
+        "react-turnstile": "^1.1.4",
         "react-twemoji": "^0.6.0",
         "react-type-animation": "^3.2.0",
         "sass": "^1.85.1",
