--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "dev": "vite --force",
         "build": "tsc --allowUnusedLabels && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
     },
     "dependencies": {
         "@stripe/react-stripe-js": "^2.9.0",
@@ -16,42 +15,38 @@
         "@types/react-helmet-async": "^1.0.3",
         "@types/react-tooltip": "^4.2.4",
         "@types/react-twemoji": "^0.4.3",
-        "@use-gesture/react": "^10.3.1",
-        "dotenv": "^16.4.7",
-        "motion": "^12.5.0",
-        "prismjs": "^1.30.0",
+        "dotenv": "^16.6.1",
         "qrcode": "^1.5.4",
-        "react": "^19.0.0",
+        "react": "^19.1.1",
         "react-colorful": "^5.6.1",
-        "react-dom": "^19.0.0",
+        "react-dom": "^19.1.1",
         "react-helmet-async": "^2.0.5",
         "react-markdown": "^10.1.0",
-        "react-router-dom": "^6.30.0",
-        "react-select": "^5.10.1",
-        "react-spring": "^9.7.5",
-        "react-tooltip": "^5.28.0",
+        "react-router-dom": "^6.30.1",
+        "react-select": "^5.10.2",
+        "react-tooltip": "^5.29.1",
         "react-turnstile": "^1.1.4",
         "react-twemoji": "^0.6.0",
         "react-type-animation": "^3.2.0",
-        "sass": "^1.85.1",
+        "sass": "^1.89.2",
         "slate-react": "^0.112.1",
         "socket.io-client": "^4.8.1",
-        "terser": "^5.39.0",
+        "terser": "^5.43.1",
         "tone": "^15.1.22",
-        "zustand": "^5.0.6"
+        "zustand": "^5.0.7"
     },
     "devDependencies": {
-        "@stylistic/eslint-plugin": "^4.2.0",
-        "@types/react": "^18.3.18",
-        "@types/react-dom": "^18.3.5",
+        "@stylistic/eslint-plugin": "^4.4.1",
+        "@types/react": "^18.3.23",
+        "@types/react-dom": "^18.3.7",
         "@typescript-eslint/eslint-plugin": "^7.18.0",
         "@typescript-eslint/parser": "^7.18.0",
-        "@vitejs/plugin-react-swc": "^3.8.0",
+        "@vitejs/plugin-react-swc": "^3.11.0",
         "eslint": "^8.57.1",
         "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "typescript": "^5.8.2",
-        "typescript-plugin-css-modules": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "typescript": "^5.9.2",
+        "typescript-plugin-css-modules": "^5.2.0",
         "vite": "^6.3.5"
     }
 }
